# clinica

./: db.sqlite3  manage.py  pyproject.toml
clinica_agil/: asgi.py  settings.py  urls.py  views.py  wsgi.py
clinica_agil/static/css/: index.css
consultas/: models.py  urls.py  views.py
consultas/migrations/: 0001_initial.py
consultas/templates/: cadastrar_paciente.html  cancelar_consulta.html  index.html  login.html  marcar_consulta.html
